bugfix: fixed form submitting when any promotions are not defined

--- a/templates/default/document/documentadd.html
+++ b/templates/default/document/documentadd.html
@@ -266,7 +266,7 @@
 			var form = $('#documentadd-form');
 			if (form.get(0).checkValidity()) {
 				$(this).prop('disabled', !$('#new-window-toggle').prop('checked'));
-				form.attr('action', form.attr('action').replace('&print=1', ''));
+				form.attr('action', form.attr('action').replace('&print=1', '')).submit();
 			}
 		});
 	{/if}
@@ -276,6 +276,9 @@
 		if (form.get(0).checkValidity()) {
 			$(this).prop('disabled', !$('#new-window-toggle').prop('checked'));
 			form.attr('action', form.attr('action') + '&print=1');
+			{if empty($promotions)}
+				form.submit();
+			{/if}
 		}
 	});
 
