bugfix: remove javascript errors in document adding after last changes in customerassignmentshelper which were introduced for calculations in net terms

--- a/templates/default/document/documentpromotions.html
+++ b/templates/default/document/documentpromotions.html
@@ -29,6 +29,11 @@
 </table>
 
 <script>
+	var tariffDefaultTaxId = {$defaultTaxId};
+	var assignmentGrossvalue = '{$document.assignment.value}';
+	var assignmentNetvalue = '{$document.assignment.netvalue}';
+	var assignmentNetflag = '{$document.assignment.netflag}';
+	var assignmentTaxid = '{$document.assignment.taxid}';
 
 	var tariffTypes = [];
 	{foreach $tariffs as $tariff}
