--- a/templates/default/twofactorauth/twofactorauthcode.html
+++ b/templates/default/twofactorauth/twofactorauthcode.html
@@ -78,7 +78,7 @@
 						{trans("Authentication code:")}
 					</td>
 					<td>
-						<input class="bold" type="number" name="authcodeform[authcode]" size="10" accesskey="l" autofocus autocomplete="false">
+						<input class="bold" type="number" name="authcodeform[authcode]" size="10" accesskey="l" autofocus autocomplete="new-password">
 					</td>
 				</tr>
 				<tr>
