--- a/templates/default/user/useradd.html
+++ b/templates/default/user/useradd.html
@@ -101,7 +101,7 @@
 			</>
 			<td>
 				<input type="email" name="useradd[email]" value="{$useradd.email}" size="40"
-					{tip text="Enter e-mail address (optional)" trigger="email"}>
+					{tip text="Enter e-mail address (optional)" trigger="email"} autocomplete="new-password">
 			</td>
 		</tr>
 		<tr>
@@ -157,10 +157,10 @@
 				{trans('from')}:
 				<input type="text" name="useradd[accessfrom]" value="{if $useradd.accessfrom}{$useradd.accessfrom}{/if}"
 					size="10" placeholder="{trans("yyyy/mm/dd")}"
-					{tip class="lms-ui-date" text="Enter access start date in YYYY/MM/DD format. If you don't want to define 'From' date leave this field empty" trigger="accessfrom"} autocomplete="off">
+					{tip class="lms-ui-date" text="Enter access start date in YYYY/MM/DD format. If you don't want to define 'From' date leave this field empty" trigger="accessfrom"} autocomplete="new-password">
 				{trans('to')}:
 				<input type="text" name="useradd[accessto]" value="{if $useradd.accessto}{$useradd.accessto}{/if}"
-					size="10" placeholder="{trans("yyyy/mm/dd")}" autocomplete="off"
+					size="10" placeholder="{trans("yyyy/mm/dd")}" autocomplete="new-password"
 					{tip class="lms-ui-date" text="Enter access end date in YYYY/MM/DD format. If you don't want to define 'To' date leave this field empty" trigger="accessto"}>
 			</td>
 		</tr>
@@ -170,7 +170,7 @@
 				<strong>{trans("Password:")}</strong>
 			</td>
 			<td>
-				<input type="password" name="useradd[password]" required {tip text="Enter password" trigger="password"} autocomplete="off">
+				<input type="password" name="useradd[password]" required {tip text="Enter password" trigger="password"} autocomplete="new-password">
 			</td>
 		</tr>
 		<tr>
@@ -179,7 +179,7 @@
 				<strong>{trans("Repeat password:")}</strong>
 			</td>
 			<td>
-				<input type="password" name="useradd[confirm]" required {tip text="Confirm password" trigger="password"} autocomplete="off">
+				<input type="password" name="useradd[confirm]" required {tip text="Confirm password" trigger="password"} autocomplete="new-password">
 			</td>
 		</tr>
 		<tr>
