--- a/templates/default/vlan/vlanlist.html
+++ b/templates/default/vlan/vlanlist.html
@@ -55,7 +55,7 @@
             </td>
             <td class="buttons">
                 {button type="link" icon="edit" href="?m=vlanlist&action=modify&id={$v.id}" tip="Edit"}
-                {button type="link" icon="delete" href="?m=vlanlist&action=delete&id={$v.id}" tip="Delete"}
+                {button type="link" icon="delete" href="?m=vlanlist&action=delete&id={$v.id}" tip="Delete" class="delete-vlan"}
             </td>
         </tr>
         {/foreach}
@@ -63,6 +63,17 @@
 </table>
 
 {include file="vlan/vlanmodify-dialog.html"}
+
+<script>
+    $(function() {
+        $( '.delete-vlan' ).click(function() {
+            confirmDialog( $t("Are you sure, you want to delete that VLAN?") , this).done(function() {
+                location.href = $(this).attr('href');
+            });
+            return false;
+        });
+    });
+</script>
 
 {/block}
 
