improvement: usergrouplist form icons awesomed

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1588,6 +1588,16 @@
   }
 }
 
+.lms-ui-icon-total,
+.lms-ui-icon-sum {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-calculator;
+  }
+}
+
 .lms-ui-icon-account-number {
   .fa-icon;
   .fas;
