improvement: ui/ux added some add-buttons to help navigation between forms

--- a/templates/default/balance/balancelist.html
+++ b/templates/default/balance/balancelist.html
@@ -137,7 +137,7 @@
 		<TH scope="col">
 			{trans("Description:")}
 		</TH>
-		<TH scope="col">&nbsp;</TH>
+		<TH scope="col">{button icon="add" label="New Balance" href="?m=balanceadd"}</TH>
 	</TR>
 	<TR>
 		<TD colspan="10">
