--- a/templates/default/voipaccount/voipaccountlist.html
+++ b/templates/default/voipaccount/voipaccountlist.html
@@ -41,7 +41,7 @@
                 {trans("Password:")}
             </th>
             <th align="right" class="nobr">
-                {t a=$listdata.total}Total: $a{/t}
+		{button icon="add" label="New Account" href="?m=voipaccountadd"}
             </th>
         </tr>
         {/block}
