--- a/templates/default/tariff/tarifflist.html
+++ b/templates/default/tariff/tarifflist.html
@@ -63,7 +63,7 @@
 			{/if}
 		</TD>
 		<TD class="bold text-right nobr">
-			{t a=$listdata.total}Total: $a{/t}
+			{button icon="add" label="New Subscription" href="?m=tariffadd{if $listdata.type}&t={$listdata.type}{/if}"}
 		</TD>
 	</TR>
 	<TR>
@@ -247,7 +247,7 @@
 				{/foreach}
 			{/if}
 		</TD>
-		<TD>&nbsp;</TD>
+		<TD class="bold">{t a=$listdata.total}Total: $a{/t}</TD>
 	</TR>
     </TFOOT>
 </TABLE>
