improvement: ui/ux added some add-buttons to help navigation between … (#2043)

--- a/templates/default/rt/rtqueuelist.html
+++ b/templates/default/rt/rtqueuelist.html
@@ -47,7 +47,9 @@
 			{trans("Last:")}
 		</TD>
 		<TD>
-			&nbsp;
+			{if ConfigHelper::checkPrivilege('helpdesk_administration')}
+				{button label="New Queue" icon="add" href="?m=rtqueueadd"}
+			{/if}
 		</TD>
 	</TR>
 	<TR>
