--- a/templates/default/event/eventlistbox.html
+++ b/templates/default/event/eventlistbox.html
@@ -1,8 +1,14 @@
 {block name="eventlistbox"}
 <style>
+
     .event-single-sortable-handler {
         cursor: grab;
     }
+
+    a.event-info-short-button.lms-ui-button:not(.lms-ui-link-button) > i {
+        width: auto;
+    }
+
 </style>
 {foreach $daylist as $day}
 <TABLE id="event-day-{$day}" class="lmsbox lms-ui-background-cycle event-day-table">
