--- a/templates/default/event/eventlistbox_overdue.html
+++ b/templates/default/event/eventlistbox_overdue.html
@@ -5,6 +5,10 @@
         box-shadow: 0 0 3px 1px red;
     }
 
+    a.event-info-short-button.lms-ui-button:not(.lms-ui-link-button) > i {
+        width: auto;
+    }
+
 </style>
 
 <table class="lmsbox lms-ui-tab-container lms-ui-background-cycle{if !empty($overdue_events)} overdue-events{/if}">
