--- a/templates/default/event/eventlistboxrow.html
+++ b/templates/default/event/eventlistboxrow.html
@@ -8,9 +8,9 @@
             <br>
         {/if}
         {if $event.ticketid}
-            {hint mode="rollover" url="?m=rtticketinfo&id={$event.ticketid}" icon="info" class="fa-xs"}
+            {hint mode="rollover" url="?m=rtticketinfo&id={$event.ticketid}" icon="info" class="event-info-short-button fa-xs"}
             <a href="?m=rtticketview&id={$event.ticketid}" style="color: black;">
-                {$event.ticketid|string_format:"%06d"}
+                #{$event.ticketid|string_format:"%06d"}
             </a>
         {/if}
     </td>
