improvement: changed colors

--- a/templates/default/event/eventlistbox.html
+++ b/templates/default/event/eventlistbox.html
@@ -5,6 +5,10 @@
         cursor: grab;
     }
 
+    a.lms-ui-button.event-info-short-button:not(.lms-ui-link-button) > i:before {
+        color: inherit;
+    }
+
 </style>
 {foreach $daylist as $day}
 <TABLE id="event-day-{$day}" class="lmsbox lms-ui-background-cycle event-day-table">
