--- a/templates/default/event/eventlistboxrow.html
+++ b/templates/default/event/eventlistboxrow.html
@@ -65,7 +65,9 @@
             {if !empty($event.netnode_location)}<br>{icon name="location"} {$event.netnode_location}{/if}
         {else}
         {if $event.customername}
-            {icon name="customer"} <A href="?m=customerinfo&amp;id={$event.customerid}">{$event.customername|truncate:"30":"&hellip;":true}</A><br>
+            {hint mode="rollover" icon="customer" url="?m=customerinfoshort&id={$event.customerid}"}
+            <a href="?m=customerinfo&id={$event.customerid}">{$event.customername|truncate:"30":"&hellip;":true}</a>
+            <br>
         {if !empty($event.address_id)}
             {icon name="location"} {$event.location|escape}
         {elseif !empty($event.nodeid)}
