--- a/templates/default/event/eventlistboxrow.html
+++ b/templates/default/event/eventlistboxrow.html
@@ -8,7 +8,7 @@
             <br>
         {/if}
         {if $event.ticketid}
-            {hint mode="rollover" url="?m=rtticketinfo&id={$event.ticketid}" icon="info"
+            {hint mode="toggle" url="?m=rtticketinfo&id={$event.ticketid}" icon="info"
                 class="event-info-short-button fa-xs" style="{if isset($_EVENTSTYLES[$event.type])}{$_EVENTSTYLES[$event.type]}{/if}"}
             <a href="?m=rtticketview&id={$event.ticketid}" style="{if isset($_EVENTSTYLES[$event.type])}{$_EVENTSTYLES[$event.type]}{/if}">
                 #{$event.ticketid}
@@ -65,7 +65,7 @@
             {if !empty($event.netnode_location)}<br>{icon name="location"} {$event.netnode_location}{/if}
         {else}
         {if $event.customername}
-            {hint mode="rollover" icon="customer" url="?m=customerinfoshort&id={$event.customerid}"}
+            {hint mode="toggle" icon="customer" url="?m=customerinfoshort&id={$event.customerid}"}
             <a href="?m=customerinfo&id={$event.customerid}">{$event.customername|truncate:"30":"&hellip;":true}</a>
             <br>
         {if !empty($event.address_id)}
