enhancement: added 'without location address' status filter in customerlist and customersearch forms (LMS+ #1831)

--- a/templates/default/customer/customerlist.html
+++ b/templates/default/customer/customerlist.html
@@ -173,6 +173,7 @@
 					<OPTION VALUE="70"{if $filter.state == 70} SELECTED{/if}>{trans("TERRIT not specified")}</OPTION>
 					<OPTION VALUE="68"{if $filter.state == 68} SELECTED{/if}>{trans("without zip (main address)")}</OPTION>
 					<OPTION VALUE="74"{if $filter.state == 74} SELECTED{/if}>{trans("without zip (other addresses)")}</OPTION>
+					<option value="81"{if $filter.state == 81} selected{/if}>{trans("without location address")}</option>
 				</optgroup>
 			</SELECT>
 			</label>
