--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -498,6 +498,7 @@
 				<OPTION VALUE="70">{trans("TERRIT not specified")}</OPTION>
 				<OPTION VALUE="68">{trans("without zip (main address)")}</OPTION>
 				<OPTION VALUE="74">{trans("without zip (other addresses)")}</OPTION>
+				<option value="81">{trans("without location address")}</option>
 				<OPTION value="73">{trans("with unarchived documents")}</OPTION>
 			</SELECT>
 			<label>
