--- a/templates/default/customer/customereditbox.html
+++ b/templates/default/customer/customereditbox.html
@@ -8,7 +8,8 @@
 	{/if}
 {/if}
 <script type="text/javascript" src="js/location_box_expandable.js"></script>
-<SCRIPT>
+<script>
+
 	function randomize() {
 		if (document.customeredit.elements['customerdata[pin]'].value != '') {
 			confirmDialog($t("Are you sure, you want to generate new PIN?"), $('#randomize')).done(function () {
@@ -17,7 +18,8 @@
 			});
 		}
 	}
-</SCRIPT>
+
+</script>
 <style>
 
 	.cell-flex {
@@ -48,6 +50,11 @@
 		cursor: pointer;
 	}
 
+	.textarea-container {
+		display: inline-flex;
+		align-items: center;
+	}
+
 </style>
 
 <FORM name="customeredit" id="customeredit" method="post" action="?m=customeredit&id={$customerinfo.id}{if $recover}&action=recover{/if}">
@@ -66,22 +73,28 @@
 					</colgroup>
 					<tr>
 						<td>
-							<label for="customerdata[lastname]"><strong>{trans("Name/Surname:")}</strong></label>
+							<label for="customerdata[lastname]">
+								<strong>{trans("Name/Surname")}</strong>
+							</label>
 						</td>
 						<td>
-							<INPUT type="text" name="customerdata[lastname]" maxlength="128"
-									value="{$customerinfo.lastname|escape}" required
-									{tip class="lms-ui-autogrow" text="Enter first/lastname of customer" trigger="lastname" bold=1}>
+							<input type="text" name="customerdata[lastname]" maxlength="128"
+								value="{$customerinfo.lastname|escape}" required
+								{tip class="lms-ui-autogrow" trigger="lastname" bold=1}>
+							{hint content="Enter first/lastname of customer"}
 						</td>
 					</tr>
 					<tr>
 						<td>
-							<label for="customerdata[name]"><strong>{trans("First name:")}</strong></label>
+							<label for="customerdata[name]">
+								<strong>{trans("First name")}</strong>
+							</label>
 						</td>
 						<td>
-							<INPUT type="text" name="customerdata[name]" value="{$customerinfo.name|escape}"
-									maxlength="128"
-									{tip class="lms-ui-autogrow" text="Enter first name of customer (optional)" trigger="name" bold=1}>
+							<input type="text" name="customerdata[name]" value="{$customerinfo.name|escape}"
+								maxlength="128"
+								{tip class="lms-ui-autogrow" trigger="name" bold=1}>
+							{hint content="Enter first name of customer (optional)"}
 						</td>
 					</tr>
 				</table>
@@ -90,10 +103,12 @@
 				<table>
 					<tr>
 						<td>
-							<label for="customerdata[extid]"><strong>{trans("External system identifier:")}</strong>
+							<label for="customerdata[extid]">
+								<strong>{trans("External system identifier")}</strong>
 								<input type="text" maxlength="20" name="customerdata[extid]" value="{$customerinfo.extid|escape}"
-									{tip text="Enter customer identifier in external system (optional)" trigger="extid"}>
+									{tip trigger="extid"}>
 							</label>
+							{hint content="Enter customer identifier in external system (optional)"}
 						</td>
 					</tr>
 				</table>
@@ -116,11 +131,11 @@
 							<i class="lms-ui-icon-customer-status-{$_CSTATUSES[$customerinfo.status].alias}"></i>
 						</TD>
 						<TD>
-							<SELECT size="1" name="customerdata[status]" {tip text="Select customer state" trigger="status"}>
+							<select size="1" name="customerdata[status]" {tip trigger="status"}>
 								{foreach $_CSTATUSES as $statusidx => $status}
-								<OPTION value="{$statusidx}"{if $customerinfo.status == $statusidx} selected{/if}>{$status.singularlabel}</OPTION>
+									<option value="{$statusidx}"{if $customerinfo.status == $statusidx} selected{/if}>{$status.singularlabel}</option>
 								{/foreach}
-							</SELECT>
+							</select>
 						</TD>
 					</TR>
 					{if $divisions}
@@ -129,13 +144,13 @@
 							<i class="lms-ui-icon-division"></i>
 						</TD>
 						<TD>
-							<SELECT size="1" name="customerdata[divisionid]" {tip text="Select division" trigger="divisionid"}>
+							<select size="1" name="customerdata[divisionid]" {tip trigger="divisionid"}>
 								{foreach $divisions as $item}
 									{if !$item.status || $item.id == $customerinfo.divisionid}
 										<option value="{$item.id}"{if $customerinfo.divisionid == $item.id} selected{/if}>{$item.label|escape}</option>
 									{/if}
 								{/foreach}
-							</SELECT>
+							</select>
 						</TD>
 					</TR>
 					{/if}
@@ -146,16 +161,17 @@
 						<TD>
 							<label>
 								<input type="radio" name="customerdata[type]" value="{$smarty.const.CTYPES_PRIVATE}" id="private"
-									{tip text="Select legal personality type" trigger="type"}
+									{tip trigger="type"}
 									{if $customerinfo.type == $smarty.const.CTYPES_PRIVATE} checked{/if}>
 								{$_CTYPES[$smarty.const.CTYPES_PRIVATE]}
 							</label>
 							<label>
 								<input type="radio" name="customerdata[type]" value="{$smarty.const.CTYPES_COMPANY}" id="company"
-									{tip text="Select legal personality type" trigger="type"}
+									{tip trigger="type"}
 									{if $customerinfo.type == $smarty.const.CTYPES_COMPANY} checked{/if}>
 								{$_CTYPES[$smarty.const.CTYPES_COMPANY]}
 							</label>
+							{hint content="Select legal personality type"}
 						</TD>
 					</TR>
 
@@ -283,8 +299,9 @@
 							<i class="lms-ui-icon-customer-pin-code"></i>
 						</TD>
 						<TD>
-							<INPUT type="text" required name="customerdata[pin]" size="{$pin_max_size}" value="{if $customerinfo.pin}{$customerinfo.pin}{/if}" {tip text=$pin_tip trigger="pin"}>&nbsp;
-							<A id="randomize" href="javascript:randomize()" {tip text="Generate PIN"}>&raquo;&raquo;&raquo;</A>
+							<input type="text" required name="customerdata[pin]" size="{$pin_max_size}"
+								value="{if $customerinfo.pin}{$customerinfo.pin}{/if}" {tip text=$pin_tip trigger="pin"}>&nbsp;
+							<a id="randomize" href="javascript:randomize()" {tip text="Generate PIN"}>&raquo;&raquo;&raquo;</a>
 						</TD>
 					</TR>
 					<TR>
@@ -299,43 +316,45 @@
 									<COL style="width: 99%;">
 								</COLGROUP>
 								<TR>
-									<TD class="nobr">{trans("Identity type:")}</TD>
+									<TD class="nobr">{trans("Identity type")}</TD>
 									<TD>
 										{identitytypes elemname="customerdata[ict]" selected=$customerinfo.ict
-											tip="Select identity type" trigger="ict"}
+											trigger="ict"}
 									</TD>
 								</TR>
 								<TR>
-									<TD class="nobr">{trans("Identity number:")}</TD>
+									<TD class="nobr">{trans("Identity number")}</TD>
 									<TD>
 										{if $customerinfo.icnwarning}
-										<INPUT type="hidden" name="customerdata[icnwarning]" value="1">
+											<input type="hidden" name="customerdata[icnwarning]" value="1">
 										{/if}
-										<INPUT type="text" value="{$customerinfo.icn}" name="customerdata[icn]" size="30"
-											{tip text="Enter identity number (optional)" trigger="icn"}>
+										<input type="text" value="{$customerinfo.icn}" name="customerdata[icn]" size="30"
+											{tip trigger="icn"}>
 									</TD>
 								</TR>
 								<TR>
-									<TD>{trans("SSN")}:</TD>
+									<TD>{trans("SSN")}</TD>
 									<TD>
-										<INPUT type="text" name="customerdata[ssn]" value="{$customerinfo.ssn}" size="30" {tip text="Enter Social Security Number (optional)" trigger="ssn"}>
+										<input type="text" name="customerdata[ssn]" value="{$customerinfo.ssn}" size="30"
+											{tip trigger="ssn"}>
 										{if $customerinfo.ssnwarning}
-										<INPUT type="hidden" name="customerdata[ssnwarning]" value="1">
+											<input type="hidden" name="customerdata[ssnwarning]" value="1">
 										{/if}
 										{if $customerinfo.ssnexistencewarning}
-										<INPUT type="hidden" name="customerdata[ssnexistencewarning]" value="1">
+											<input type="hidden" name="customerdata[ssnexistencewarning]" value="1">
 										{/if}
 									</TD>
 								</TR>
 								<TR>
-									<TD>{trans("TEN")}:</TD>
+									<TD>{trans("TEN")}</TD>
 									<TD>
-										<INPUT type="text" name="customerdata[ten]" value="{$customerinfo.ten}" size="30" {tip text="Enter Tax Exempt Number (optional)" trigger="ten"}>
+										<input type="text" name="customerdata[ten]" value="{$customerinfo.ten}" size="30"
+											{tip trigger="ten"}>
 										{if $customerinfo.tenwarning}
-										<INPUT type="hidden" name="customerdata[tenwarning]" value="1">
+											<input type="hidden" name="customerdata[tenwarning]" value="1">
 										{/if}
 										{if $customerinfo.tenexistencewarning}
-										<INPUT type="hidden" name="customerdata[tenexistencewarning]" value="1">
+											<input type="hidden" name="customerdata[tenexistencewarning]" value="1">
 										{/if}
 										{button type="link" icon="division" class="gusapi-button"
 											data_type=Utils::GUS_REGON_API_SEARCH_TYPE_TEN
@@ -343,27 +362,33 @@
 									</TD>
 								</TR>
 								<TR>
-									<TD>{trans("REGON")}:</TD>
+									<TD>{trans("REGON")}</TD>
 									<TD>
-										<INPUT type="text" value="{$customerinfo.regon}" name="customerdata[regon]" size="30" {tip text="Enter Business Registration Number (optional)" trigger="regon"}>
+										<input type="text" value="{$customerinfo.regon}" name="customerdata[regon]" size="30"
+											{tip trigger="regon"}>
 										{button type="link" icon="division" class="gusapi-button"
 											data_type=Utils::GUS_REGON_API_SEARCH_TYPE_REGON
 											tip="Click here to autocomplete company data from GUS REGON database"}
 									</TD>
 								</TR>
 								<TR>
-									<TD>{trans("RBE Name:")}</TD>
+									<TD>{trans("RBE Name")}</TD>
 									<TD>
-										<TEXTAREA name="customerdata[rbename]" cols="45" rows="4" {tip text="Enter National Court Register / Register of Business Entities Name (optional)" trigger="rbename"}>{$customerinfo.rbename|escape}</TEXTAREA>
+										<textarea name="customerdata[rbename]" cols="45" rows="4"
+											{tip trigger="rbename"}
+											>{$customerinfo.rbename|escape}</textarea>
+										{hint content="Enter National Court Register / Register of Business Entities Name (optional)"}
 									</TD>
 								</TR>
 								<TR>
-									<TD>{trans("RBE")}:</TD>
+									<TD>{trans("RBE")}</TD>
 									<TD>
-										<INPUT type="text" value="{$customerinfo.rbe}" name="customerdata[rbe]" size="30" {tip text="Enter National Court Register / Register of Business Entities Number (optional)" trigger="rbe"}>
+										<input type="text" value="{$customerinfo.rbe}" name="customerdata[rbe]" size="30"
+											{tip trigger="rbe"}>
 										{button type="link" icon="division" class="gusapi-button"
 											data_type=Utils::GUS_REGON_API_SEARCH_TYPE_RBE
 											tip="Click here to autocomplete company data from GUS REGON database"}
+										{hint content="Enter National Court Register / Register of Business Entities Number (optional)"}
 									</TD>
 								</TR>
 							</TABLE>
@@ -378,11 +403,11 @@
 							<TABLE>
 								<TR>
 									<TD>
-										{trans("Deadline:")}
+										{trans("Deadline")}
 									</TD>
 									<TD id="paytime-cell">
 										<SELECT name="customerdata[paytime]" data-value="{$customerinfo.paytime}"
-												{tip class="lms-ui-combobox" text="Select default deadline in days" trigger="paytime"}>
+												{tip class="lms-ui-combobox" trigger="paytime"}>
 											<OPTION value="-1"{if $customerinfo.paytime==-1} selected{/if}>- {trans("default")} -</OPTION>
 											<OPTION value="0"{if $customerinfo.paytime==0} selected{/if}>0</OPTION>
 											<OPTION value="7"{if $customerinfo.paytime==7} selected{/if}>7</OPTION>
@@ -393,31 +418,34 @@
 											<OPTION value="60"{if $customerinfo.paytime==60} selected{/if}>60</OPTION>
 											<OPTION value="90"{if $customerinfo.paytime==90} selected{/if}>90</OPTION>
 										</SELECT>
+										{hint content="Select default deadline in days"}
 									</TD>
 								</TR>
 								<TR>
 									<TD>
-										{trans("Payment type:")}
+										{trans("Payment type")}
 									</TD>
 									<TD>
 										{paytypes elemname="customerdata[paytype]" selected=$customerinfo.paytype
-											tip="Select default invoices payment type" trigger="paytype"}
+											trigger="paytype"}
+										{hint content="Select default invoices payment type"}
 									</TD>
 								</TR>
 								<TR>
 									<TD>
-										{trans("Cutoff suspending:")}
+										{trans("Cutoff suspending")}
 									</TD>
 									<TD>
 										<label>
 											<input type="checkbox" name="customerdata[cutoffstopindefinitely]" value="1"
-												   onchange="$('#cutoffstop').parent().toggle(!this.checked);"
-													{if $customerinfo.cutoffstopindefinitely} checked{/if}>
+												onchange="$('#cutoffstop').parent().toggle(!this.checked);"
+												{if $customerinfo.cutoffstopindefinitely} checked{/if}>
 											{trans("indefinitely")}
 										</label>&nbsp;
-										<INPUT type="text" name="customerdata[cutoffstop]" id="cutoffstop"
-											   {if $customerinfo.cutoffstopindefinitely}style="display: none;"{elseif $customerinfo.cutoffstop}value="{$customerinfo.cutoffstop}"{/if}
-											   size="10" {tip class="lms-ui-date" text="Select date of cutoff suspending (optional)" trigger="cutoffstop"}>
+										<input type="text" name="customerdata[cutoffstop]" id="cutoffstop"
+											{if $customerinfo.cutoffstopindefinitely}style="display: none;"{elseif $customerinfo.cutoffstop}value="{$customerinfo.cutoffstop}"{/if}
+											size="10" {tip class="lms-ui-date" trigger="cutoffstop"}>
+										{hint content="Select date of cutoff suspending (optional)"}
 									</TD>
 								</TR>
 							</TABLE>
@@ -431,11 +459,11 @@
 							<TABLE cellpadding="0" class="lms-ui-separated-rows">
 								<tbody class="lms-ui-multi-check">
 									<TR>
-										<TD class="bold">
-											{trans("Consents:")}
+										<TD>
+											<strong>{trans("Consents")}</strong>
 										</TD>
 										<TD>
-											<INPUT type="checkbox" class="lms-ui-multi-check-all" value="1">
+											<input type="checkbox" class="lms-ui-multi-check-all" value="1">
 										</TD>
 									</TR>
 									{block name="customereditbox-options"}
@@ -445,7 +473,7 @@
 													<span class="consent-label">{$consent.label}</span>
 												</TD>
 												<TD>
-													<INPUT type="checkbox" name="customerdata[consents][{$type}]" id="chkconsent{$type}"
+													<input type="checkbox" name="customerdata[consents][{$type}]" id="chkconsent{$type}"
 														value="{$smarty.now}"{if isset($customerinfo.consents[$type])} checked{/if}
 														{tip trigger="chkconsent"|cat:$type class="lms-ui-multi-check"}>
 												</TD>
@@ -471,7 +499,12 @@
 							<i class="lms-ui-icon-optional-info"></i>
 						</TD>
 						<TD>
-							<TEXTAREA name="customerdata[info]" class="lms-ui-wysiwyg-editor" COLS="60" ROWS="10" {tip text="Enter additional information (optional)"}{if isset($customerinfo.wysiwyg.info)} data-wysiwyg="{$customerinfo.wysiwyg.info}"{/if}>{$customerinfo.info|escape}</TEXTAREA>
+							<div class="textarea-container">
+								<textarea name="customerdata[info]" class="lms-ui-wysiwyg-editor" cols="60" rows="10"
+									{if isset($customerinfo.wysiwyg.info)} data-wysiwyg="{$customerinfo.wysiwyg.info}"{/if}
+									>{$customerinfo.info|escape}</textarea>
+								{hint content="Enter additional information (optional)"}
+							</div>
 						</TD>
 					</TR>
 					<TR>
@@ -479,7 +512,11 @@
 							<i class="lms-ui-icon-warning"></i>
 						</TD>
 						<TD>
-							<TEXTAREA name="customerdata[message]" class="lms-ui-wysiwyg-editor" COLS="60" ROWS="10" {tip text="Enter notice contents (optional)"}{if isset($customerinfo.wysiwyg.message)} data-wysiwyg="{$customerinfo.wysiwyg.message}"{/if}>{$customerinfo.message|escape}</TEXTAREA>
+							<div class="textarea-container">
+								<textarea name="customerdata[message]" class="lms-ui-wysiwyg-editor" cols="60" rows="10"
+									{if isset($customerinfo.wysiwyg.message)} data-wysiwyg="{$customerinfo.wysiwyg.message}"{/if}>{$customerinfo.message|escape}</textarea>
+								{hint content="Enter notice contents (optional)"}
+							</div>
 						</TD>
 					</TR>
 					<TR>
@@ -487,7 +524,12 @@
 							<i class="lms-ui-icon-notes"></i>
 						</TD>
 						<TD>
-							<TEXTAREA name="customerdata[notes]" class="lms-ui-wysiwyg-editor" COLS="60" ROWS="10" {tip text="Enter notes (optional)"}{if isset($customerinfo.wysiwyg.notes)} data-wysiwyg="{$customerinfo.wysiwyg.notes}"{/if}>{$customerinfo.notes|escape}</TEXTAREA>
+							<div class="textarea-container">
+								<textarea name="customerdata[notes]" class="lms-ui-wysiwyg-editor" cols="60" rows="10"
+									{if isset($customerinfo.wysiwyg.notes)} data-wysiwyg="{$customerinfo.wysiwyg.notes}"{/if}
+									>{$customerinfo.notes|escape}</textarea>
+								{hint content="Enter notes (optional)"}
+							</div>
 						</TD>
 					</TR>
 					<TR>
@@ -495,9 +537,13 @@
 							<i class="lms-ui-icon-memo"></i>
 						</TD>
 						<TD>
-							<TEXTAREA name="customerdata[documentmemo]" class="lms-ui-wysiwyg-editor"
-									  COLS="60" ROWS="10" {tip text="Enter document memo (optional)"}
-									{if isset($customerinfo.wysiwyg.documentmemo)} data-wysiwyg="{$customerinfo.wysiwyg.documentmemo}"{/if}>{$customerinfo.documentmemo|escape}</TEXTAREA>
+							<div class="textarea-container">
+								<textarea name="customerdata[documentmemo]" class="lms-ui-wysiwyg-editor"
+									cols="60" rows="10"
+									{if isset($customerinfo.wysiwyg.documentmemo)} data-wysiwyg="{$customerinfo.wysiwyg.documentmemo}"{/if}
+									>{$customerinfo.documentmemo|escape}</textarea>
+								{hint content="Enter document memo (optional)"}
+							</div>
 						</TD>
 					</TR>
 					<TR>
@@ -505,8 +551,12 @@
 							<i class="lms-ui-icon-money"></i>
 						</TD>
 						<TD>
-							<span class="bold">{trans("Balance:")}</span>
-							{if $customerinfo.balance < 0}<span class="lms-ui-alert">{moneyf($customerinfo.balance)}</span>{else}{moneyf($customerinfo.balance)}{/if}
+							<strong>{trans("Balance")}</strong>
+							{if $customerinfo.balance < 0}
+								<span class="lms-ui-alert">{moneyf($customerinfo.balance)}</span>
+							{else}
+								{moneyf($customerinfo.balance)}
+							{/if}
 						</TD>
 					</TR>
 					<TR>
@@ -514,8 +564,11 @@
 							<i class="lms-ui-icon-modified-date"></i>
 						</TD>
 						<TD>
-							<span class="bold">{trans("Created:")}</span> {$customerinfo.createdby|escape}, {$customerinfo.creationdateh}<BR>
-							<span class="bold">{trans("Modified:")}</span> {if $customerinfo.moddate}{$customerinfo.modifiedby|escape}, {$customerinfo.moddateh}{else}-{/if}
+							<strong>{trans("Created")}</strong>
+							{$customerinfo.createdby|escape}, {$customerinfo.creationdateh}
+							<br>
+							<strong>{trans("Modified")}</strong>
+							{if $customerinfo.moddate}{$customerinfo.modifiedby|escape}, {$customerinfo.moddateh}{else}-{/if}
 						</TD>
 					</TR>
 					{/block}
