devel/improvement: modernized customer forms

--- a/templates/default/customer/customereditbox.html
+++ b/templates/default/customer/customereditbox.html
@@ -319,7 +319,7 @@
 									<TD class="nobr">{trans("Identity type")}</TD>
 									<TD>
 										{identitytypes elemname="customerdata[ict]" selected=$customerinfo.ict
-											trigger="ict"}
+											tip="" trigger="ict"}
 									</TD>
 								</TR>
 								<TR>
