--- a/templates/default/customer/customeradd.html
+++ b/templates/default/customer/customeradd.html
@@ -351,7 +351,7 @@
 									</TD>
 									<TD>
 										{identitytypes elemname="customeradd[ict]" selected=$customerinfo.ict
-											trigger="ict"}
+											tip="" trigger="ict"}
 									</TD>
 								</TR>
 								<TR>
