--- a/templates/default/customer/customerlist.html
+++ b/templates/default/customer/customerlist.html
@@ -178,7 +178,7 @@
 			</SELECT>
 			</label>
 
-			{division_selection name="d" selected=$filter.division onchange="document.choosefilter.submit();" label="Division"}
+			{division_selection name="d" selected=$filter.division onchange="document.choosefilter.submit();" label="Division" tip=""}
 
 			<label for="n" class="nobr">
 			{trans("Network")}
